--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "raw-loader": "^0.5.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
+  },
+  "dependencies": {
+    "mathjs": "^3.13.1"
   }
 }
